# proyecto_final

./: .gitignore  CMakeLists.txt  README.md  bmp.cpp  bmp.h  cubo.cpp  cubo.h  igvCaja.cpp  igvCaja.h  igvCamara.cpp  igvCamara.h  igvEscena3D.cpp  igvEscena3D.h  igvFuenteLuz.cpp  igvFuenteLuz.h  igvInterfaz.cpp  igvInterfaz.h  igvPunto3D.cpp  igvPunto3D.h  igvTextura.cpp  igvTextura.h  main.cpp  prac4.sln  puerta.cpp  puerta.h  robot.cpp  robot.h  utils.cpp  utils.h
prac4/: prac4.vcxproj  prac4.vcxproj.filters  resource.h
